2020-01-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Header eye candy

	Albrecht's suggestion!

	* src/balsa-mime-widget-message.c (add_header_gchar): improve
	xalign property of header value labels.

2020-01-23  Albrecht Dreß  <albrecht.dress@arcor.de>

	Crypto eye candies

	* libbalsa/libbalsa-gpgme-widgets.c: improve xalign and yalign properties
	  of labels in signature and key details widgets
	* src/balsa-mime-widget-crypto.c: balsa_mime_widget_signature_widget:
	  wrap/align signature status in expander label;
	  balsa_mime_widget_crypto_frame: add tooltips to padlock icons
	* src/balsa-mime-widget-message.c: add_header_sigstate:
	  wrap/align signature status in headers box

2020-01-23  Albrecht Dreß  <albrecht.dress@arcor.de>

	Bug fix: S/MIME cert chain broken in identity key selection

	* libbalsa/libbalsa-gpgme-widgets.c: libbalsa_gpgme_key(): fall back
	  to the cert fingerprint for cb smime_show_chain() if the passed one is NULL
	* libbalsa/x509-cert-widget.c: x509_cert_chain_smime(): display message
	  if the cert fingerprint is NULL, requires a litte refactoring

2020-01-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: improve ensure-visible

	* src/balsa-index.c (balsa_index_ensure_visible): if either a
	message is selected or has the focus, scroll to it.

2020-01-19  Albrecht Dreß  <albrecht.dress@arcor.de>

	* README: fix package requirements
	* configure.ac, meson.build: require libical >= 3.0.0 (note:
	  not tested for Meson builds)
	* libbalsa/rfc2445.[ch]: mostly re-written, using the libical
	  parser and data types
	* src/balsa-mime-widget-vcalendar.c: add additional event items;
	  use the new rfc2445.h api
	* src/balsa-print-object-text.c: fix two pango test layout memory
	  leaks; add additional event items; use the new rfc2445.h api
	* src/print-gtk.c: fix part selection for printing text/calendar

2020-01-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Simplify managing idle handlers
